--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <description>Demo project for Spring Boot</description>
 
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>1.15</java.version>
   </properties>
 
   <dependencies>
@@ -87,6 +87,14 @@
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
         <version>1.6</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>14</source>
+          <target>14</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
